# CProgramming

./: README.md
FindDeterminate/: CMakeLists.txt  setup.sh
FindDeterminate/testFiles/: 10X10TestMatrix.txt  2X2TestMatrix.txt  3X3TestMatrix.txt  4X4TestMatrix.txt  5X5TestMatrix.txt  6X6TestMatrix.txt  7X7TestMatrix.txt  8X8TestMatrix.txt  9X9TestMatrix.txt
ReadLines/: main.c  read_lines.h
ReadLines/Tests/: big_file.txt  double_lines.txt  extra_lines.txt  long_line.txt  normal.txt  one_line.txt  only_new_lines.txt  tabs.txt
